--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@ $menu = fuzzel
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
